# pathmc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yaml  environment.yml  great-docs.yml  hsgp_scaffolding.md  hsgp_scaffoling.md  pyproject.toml  skills-lock.json
.agents/skills/author-skills/: SKILL.md
.agents/skills/author-skills/references/: config-reference.md  skill-anatomy.md
.agents/skills/configure-site/: SKILL.md
.agents/skills/configure-site/references/: feature-matrix.md  theming-options.md
.agents/skills/great-docs/: SKILL.md
.agents/skills/great-docs/assets/: config-template.yaml
.agents/skills/great-docs/references/: cli-reference.md  common-errors.md
.agents/skills/great-docs/scripts/: run-build.sh  setup-env.sh
.agents/skills/revise-docstrings/: SKILL.md
.agents/skills/revise-docstrings/references/: docstring-checklist.md  style-examples.md
.agents/skills/write-user-guide/: SKILL.md
.agents/skills/write-user-guide/references/: page-anatomy.md  writing-guidelines.md
.github/: CODEOWNERS  release.yml
.github/pr-summaries/: 002-conditional-vs-joint-docs.md  024-clear-elevator-pitch.md  036-consistency-no-interference.md  1-att-atu.md  10-summary.md  13-summary.md  132-doresult-draws.md  138-data-optional-dag.md  141-pytensor-scan-deprecation.md  147-partial-correlation-df.md  148-collider-ancestry-prefilter.md  16-temporal-lag-edges.md  177-pypi-metadata.md  21-pearl-primer-examples.md  22-simulate-data.md  37-cross-framework-bridge-notes.md  50-interaction-terms.md  55-custom-transform-tutorial.md  62-interaction-docs.md  71-conditional-independence-tests.md  89-residual-structure-abstraction.md
.github/workflows/: ci.yml  contributors.yml  docs.yml  release.yml  zizmor.yml
_freeze/docs/examples/ate_estimation/execute-results/: html.json
_freeze/docs/examples/causal_do_operator/execute-results/: html.json
_freeze/docs/examples/causal_identification/execute-results/: html.json
_freeze/docs/examples/counterfactual/execute-results/: html.json
_freeze/docs/examples/custom_priors/execute-results/: html.json
_freeze/index/execute-results/: html.json
_freeze/user-guide/bayesian-workflow/execute-results/: html.json
_freeze/user-guide/panel-interventions/execute-results/: html.json
benchmarks/: scan_vs_conv.py
docs/: _quarto.yml  comparison.qmd  how-it-works.qmd  index.qmd  intro.qmd  references.bib
docs/assets/: contributors.json
docs/concepts/: bayesian_workflow.qmd  causal_inference.qmd  estimation_approaches.qmd  model_specification.qmd  panel_data.qmd  panel_interventions.qmd  standardized_effects.qmd  transforms_families.qmd
docs/dev/: causal_inference_audit.md  counterfactual_abduction_notes.md  data_optional_analysis.md  generality_audit.md  great_docs_migration.md  homepage_brainstorm.md  issue_17_cross_sectional_vs_panel_analysis.md  milestones.md  notebook_audit.md  panel_engine_unification.md  prd_v1.md  presentation_brainstorm.md  pymc_labs_talk.qmd  pymc_native_do_architecture.md  review_checklist.md  roadmap_post_v1.md  scan_unification_plan.md  simplification_analysis.md  talk_proposal.md  talk_style.scss  workshop_fit_assessment.md
docs/dev/archive/: scan_unification_plan.md
docs/examples/: ate_estimation.qmd  autoregressive.qmd  binary_outcomes.qmd  causal_do_operator.qmd  causal_identification.qmd  collider_bias.qmd  correlated_residuals.qmd  counterfactual.qmd  cross_sectional_vs_panel.qmd  custom_priors.qmd  custom_transforms.qmd  dag_testing.qmd  data_simulation.qmd  did.qmd  do_queries.qmd  dynamic_pricing.qmd  front_door.qmd  index.qmd  latent_mediator.qmd  mediation.qmd  mmm.qmd  mmm_awareness.qmd  mmm_awareness_surveys.qmd  mmm_basic.qmd  mmm_geo.qmd  mmm_mediation.qmd  moderation.qmd  panel_data.qmd  panel_engines.qmd  panel_interventions.qmd  saas_funnel.qmd  seeing_vs_doing.qmd  sensitivity.qmd  simpsons_paradox.qmd  the_house.qmd  vaccine_surrogates.qmd
docs/examples/01-foundations/: causal_do_operator.qmd  custom_priors.qmd  custom_transforms.qmd  data_simulation.qmd  hsgp_1d.qmd
docs/examples/02-effect-estimation/: ate_estimation.qmd  counterfactual.qmd  mediation.qmd  moderation.qmd
docs/examples/03-identification/: causal_identification.qmd  dag_falsification.qmd  dag_testing.qmd  sensitivity.qmd  the_house.qmd
docs/examples/04-panel-time/: did.qmd  panel_data.qmd
docs/examples/05-applied-models/: dynamic_pricing.qmd  instrumental_variables.qmd  mmm.qmd  mmm_awareness.qmd  saas_funnel.qmd  vaccine_surrogates.qmd
docs/user_guide/: 00-welcome.qmd  01-how-it-works.qmd  02-comparison.qmd  10-bayesian-workflow.qmd  11-model-specification.qmd  12-transforms-families.qmd  13-causal-inference.qmd  14-estimation-approaches.qmd  15-standardized-effects.qmd  16-panel-data.qmd  17-panel-interventions.qmd  18-causal-discovery.qmd
pathmc/: __init__.py  _model.py  compile.py  cpdag.py  dag.py  discovery.py  effects.py  exceptions.py  falsify.py  graph.py  hsgp.py  idata.py  identify.py  introspect.py  model.py  panel.py  parse.py  priors.py  refute.py  reprs.py  residuals.py  sensitivity.py  simulate.py  transforms.py
pathmc/skills/pathmc/: SKILL.md
skills/pathmc/: SKILL.md
tests/: _consistency.py  _draw_fixtures.py  conftest.py  test_add_lags.py  test_att_atu.py  test_bernoulli.py  test_causal_queries.py  test_compile.py  test_cpdag.py  test_dag.py  test_data_optional.py  test_discovery.py  test_do.py  test_do_predictive.py  test_do_regressions.py  test_do_slopes.py  test_effects.py  test_estimand_result_api.py  test_exog_lag_missing_base.py  test_falsify.py  test_families.py  test_graph.py  test_graph_consistency.py  test_hsgp.py  test_hsgp_compile.py  test_hsgp_do.py  test_hsgp_parse.py  test_hsgp_priors.py  test_idata.py  test_identification.py  test_instrumental_variable.py  test_interactions.py  test_internal_helpers.py  test_introspection.py  test_lag_syntax.py  test_latent.py  test_narwhals_backends.py  test_nutpie_scan_compile.py  test_panel.py  test_panel_by_time.py  (+23 more)
(+35 files in other folders)
