[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathmc"
version = "0.1.0"
description = "Bayesian path analysis and structural causal modeling in PyMC."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Benjamin Vincent" }]
maintainers = [{ name = "PyMC Labs" }]
keywords = [
    "bayesian",
    "causal-inference",
    "do-calculus",
    "path-analysis",
    "pymc",
    "structural-equation-modeling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "arviz<1",
    "graphviz",
    "networkx",
    "numpy<2.4",
    "pandas",
    "patsy",
    "pymc>=5.27.0,<6",
    "pymc-extras",
    "pymc-marketing",
    "pytensor>=2.38,<3",
]

[project.urls]
Homepage = "https://github.com/pymc-labs/pathmc"
Repository = "https://github.com/pymc-labs/pathmc"
Documentation = "https://pymc-labs.github.io/pathmc/"
Issues = "https://github.com/pymc-labs/pathmc/issues"

[project.optional-dependencies]
dev = ["mypy", "prek", "pytest", "ruff"]
docs = ["ipykernel", "jupyter", "pyyaml"]
samplers = ["nutpie", "numpyro", "jax"]

[tool.pyproject2conda]
channels = ["conda-forge"]

[tool.setuptools.packages.find]
include = ["pathmc*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require MCMC sampling (deselect with '-m \"not slow\"')",
]

[tool.mypy]
files = "pathmc/*.py"
exclude = "build|dist|docs|tests"

[[tool.mypy.overrides]]
module = [
    "arviz.*",
    "networkx.*",
    "numpy.*",
    "pandas.*",
    "patsy.*",
    "pymc.*",
    "pymc_marketing.*",
    "pytensor.*",
    "graphviz.*",
    "scipy.*",
    "xarray.*",
]
ignore_missing_imports = true
