[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathmc"
version = "0.1.0"
description = "Bayesian path analysis and structural causal modeling in PyMC."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Benjamin Vincent" }]
maintainers = [{ name = "PyMC Labs" }]
keywords = [
    "bayesian",
    "causal-inference",
    "do-calculus",
    "path-analysis",
    "pymc",
    "structural-equation-modeling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "arviz>=1.1,<2",
    "graphviz",
    # matplotlib 3.11 removed matplotlib.style.core, which arviz_plots<=1.1 still
    # imports at module load. Remove this pin once arviz_plots ships a fix.
    "matplotlib>=3.9,<3.11",
    "narwhals>=1.20,<3",
    "networkx",
    "numpy>=2.0",
    "pandas",
    "patsy",
    "pymc>=6.0,<7",
    "pymc-extras>=0.12",
    "pytensor>=3.0,<4",
]

[project.urls]
Homepage = "https://github.com/pymc-labs/pathmc"
Repository = "https://github.com/pymc-labs/pathmc"
Documentation = "https://pymc-labs.github.io/pathmc/"
Issues = "https://github.com/pymc-labs/pathmc/issues"
Contributing = "https://github.com/pymc-labs/pathmc/blob/main/CONTRIBUTING.md"

[project.optional-dependencies]
# TODO: switch to "great-docs>=0.11.0" once it's tagged on PyPI. The freeze
# feature we depend on (https://posit-dev.github.io/great-docs/user_guide/freeze.html,
# `upcoming: "0.11.0"`) landed on `main` via posit-dev/great-docs#158 after
# v0.10.0 was cut, so we pin to a specific main commit for reproducible builds.
dev = ["build", "ipykernel", "mypy", "polars", "prek", "pytest", "ruff"]
docs = [
    "great-docs>=0.11.0",
]
samplers = ["nutpie", "numpyro", "jax"]

[tool.setuptools.packages.find]
include = ["pathmc*"]

[tool.ruff]
line-length = 88
extension = { qmd = "markdown" }
include = ["pyproject.toml", "*.py", "*.pyi", "*.ipynb", "*.qmd"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require MCMC sampling (deselect with '-m \"not slow\"')",
]

[tool.mypy]
files = "pathmc/*.py"
exclude = "build|dist|docs|tests"

[[tool.mypy.overrides]]
module = [
    "arviz.*",
    "networkx.*",
    "numpy.*",
    "pandas.*",
    "patsy.*",
    "polars.*",
    "pymc.*",
    "pymc_extras.*",
    "pytensor.*",
    "graphviz.*",
    "scipy.*",
    "xarray.*",
]
ignore_missing_imports = true
