[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathmc"
version = "0.1.0"
description = "Bayesian path analysis and structural causal modeling in PyMC."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Benjamin Vincent" }]
maintainers = [{ name = "PyMC Labs" }]
keywords = [
    "bayesian",
    "causal-inference",
    "do-calculus",
    "path-analysis",
    "pymc",
    "structural-equation-modeling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "arviz>=1.1,<2",
    "graphviz",
    # matplotlib 3.11 removed matplotlib.style.core, which arviz_plots<=1.1 still
    # imports at module load. Remove this pin once arviz_plots ships a fix.
    "matplotlib>=3.9,<3.11",
    "narwhals>=1.20,<3",
    "networkx",
    "numpy>=2.0",
    "packaging",
    "pandas",
    "patsy",
    "pymc>=6.0,<7",
    "pymc-extras>=0.12",
    "pytensor>=3.0,<4",
]

[project.urls]
Homepage = "https://github.com/pymc-labs/pathmc"
Repository = "https://github.com/pymc-labs/pathmc"
Documentation = "https://pymc-labs.github.io/pathmc/"
Issues = "https://github.com/pymc-labs/pathmc/issues"
Contributing = "https://github.com/pymc-labs/pathmc/blob/main/CONTRIBUTING.md"

[project.optional-dependencies]
dev = ["build", "ipykernel", "mypy", "polars", "prek", "pytest", "pytest-cov", "ruff"]
docs = [
    # 0.11.0 is the first release with both `freeze` and the `skill` CLI
    # (posit-dev/great-docs#158 and #164).
    "great-docs>=0.11.0",
]
samplers = ["nutpie", "numpyro", "jax"]

[tool.setuptools.packages.find]
include = ["pathmc*"]

[tool.setuptools.package-data]
# Curated agent skill, bundled so `great-docs skill install pathmc` works for
# pip-installed users (resolver expects <package>/skills/<name>/SKILL.md).
# py.typed marks the package as typed (PEP 561) for downstream type checkers.
pathmc = ["skills/*/SKILL.md", "py.typed"]

[tool.ruff]
line-length = 88
extension = { qmd = "markdown" }
include = ["pyproject.toml", "*.py", "*.pyi", "*.ipynb", "*.qmd"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--color=yes",
]
markers = [
    "slow: marks tests that require MCMC sampling (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["pathmc"]
branch = true
omit = ["*/conftest.py", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
files = "pathmc/*.py"
exclude = "build|dist|docs|tests"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "arviz.*",
    "networkx.*",
    "numpy.*",
    "pandas.*",
    "patsy.*",
    "polars.*",
    "pymc.*",
    "pymc_extras.*",
    "pytensor.*",
    "graphviz.*",
    "scipy.*",
    "xarray.*",
]
ignore_missing_imports = true
